fix: z-index

--- a/css/gamepage.css
+++ b/css/gamepage.css
@@ -51,6 +51,12 @@ main{
 .logo {
     font-size: 1.5rem;
     font-weight: bold;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+.logo:hover{
+    color: #f0a500;
 }
 
 nav ul {
@@ -268,6 +274,7 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
     transition: 0.5s;
+    z-index: 1;
 }
 
 #discount-section {
